AdminTask/files_folders/rules.v4
# Generated by iptables-save v1.8.4 on Thu Oct 24 11:24:22 2024
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1945790:2312326576]
-A INPUT -s 93.171.220.0/22 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 93.171.220.0/22 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.1.0/24 -j ACCEPT
-A INPUT -s 95.85.96.0/19 -d 95.85.126.101/32 -p tcp -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 95.47.57.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 185.69.185.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 62.212.248.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 217.174.224.0/20 -d 95.85.126.101/32 -p tcp -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 185.69.187.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 185.69.186.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 93.171.220.0/22 -d 95.85.126.101/32 -p tcp -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 119.235.112.0/20 -d 95.85.126.101/32 -p tcp  -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 177.93.143.0/24 -d 95.85.126.101/32 -p tcp  -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 216.250.8.0/21 -d 95.85.126.101/32 -p tcp  -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -d 95.85.126.101/32 -p tcp  -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -d 95.85.126.101/32 -p tcp -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -d 95.85.126.101/32 -p tcp  -m tcp --dport 9021 -j ACCEPT
-A INPUT -s 95.85.96.0/19 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 95.47.57.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 185.69.185.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.212.248.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 217.174.224.0/20 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 185.69.187.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 185.69.186.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 93.171.220.0/22 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 119.235.112.0/20 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 177.93.143.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 216.250.8.0/21 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 95.85.96.0/19 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 95.47.57.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 185.69.185.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.212.248.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 217.174.224.0/20 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 185.69.187.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 185.69.186.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 93.171.220.0/22 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 119.235.112.0/20 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 177.93.143.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 216.250.8.0/21 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -d 95.85.126.101/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 53 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Oct 24 11:24:22 2024
